@@ -2,16 +2,6 @@
  * AJAX Chat client-side configuration
  */
 
-// CLass config
-var UC_USER = 0;
-var UC_POWER_USER = 1;
-var UC_VIP = 2;
-var UC_UPLOADER = 3;
-var UC_MODERATOR = 4;
-var UC_STAFF = 4;
-var UC_ADMINISTRATOR = 5;
-var UC_SYSOP = 6;
-
 // Ajax Chat config parameters:
 var ajaxChatConfig = {
 
